<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CosplayViewer</string>
    <string name="menu_blog_devart">Visit my Deviant Art!</string>
    <string name="menu_blog_facebook">Visit my Facebook!</string>
    <string name="menu_music_urb">Listen to more URB!</string>
    <string name="menu_save_image">Save Photo</string>
    <string name="menu_music_toggle">Music On/Off</string>
    <string name="menu_turn_toggle">Page Turn Animations</string>
    <string name="image_desc">Arrow button</string>

</resources>